--- a/src/app/heroes/hero/hero.component.html
+++ b/src/app/heroes/hero/hero.component.html
@@ -1,16 +1,34 @@
-<h1>Spiderman</h1>
+<h1>{{name}}</h1>
 <dl>
   <dt>Nombre:</dt>
-  <dd>Nombre</dd>
+  <dd>{{name}}</dd>
 
   <dt>Edad:</dt>
-  <dd>Edad</dd>
+  <dd>{{age}}</dd>
 
-  <dt>Biografia:</dt>
-  <dd>Biografia</dd>
+  <dt>Descripcion:</dt>
+  <dd>{{getHeroDescription()}}</dd>
 
-  <dt>Altura:</dt>
-  <dd>Altura</dd>
+  <dt>Capitalizado:</dt>
+  <dd>{{capitalizedName}}</dd>
 </dl>
-<button class="btn btn-primary mx-2">Cambiar nombre</button>
-<button class="btn btn-primary">Cambiar edad</button>
+<button
+  *ngIf="name === 'spiderman'"
+  (click)="changeHero()"
+  class="btn btn-primary mx-2"
+>
+  Cambiar nombre
+</button>
+<button
+  *ngIf="age === 30"
+  (click)="changeAge()"
+  class="btn btn-primary"
+>
+  Cambiar edad
+</button>
+<button
+  (click)="resetForm()"
+  class="btn btn-primary mx-2"
+>
+  Resetear
+</button>
