--- a/src/app/heroes/list/list.component.html
+++ b/src/app/heroes/list/list.component.html
@@ -1,1 +1,19 @@
-<p>list works!</p>
+<h3>Listado heroes</h3>
+<p
+  *ngIf="deletedHero; else nothingDeleted"
+  class="text-danger"
+>Heroe borrado <span class="text-danger">{{deletedHero}}</span></p>
+<ng-template #nothingDeleted>
+  <p class="text-danger">No ha borrado nada</p>
+</ng-template>
+
+<button
+  *ngIf="heroes.length > 0"
+  (click)="removeLastHero()"
+  class="btn btn-outline-danger"
+>
+  Borrar ultimo heroe
+</button>
+<ul class="list-group mt-2">
+  <li *ngFor="let hero of heroes" class="list-group-item">{{hero}}</li>
+</ul>
